header added to Quienes_Somos

--- a/Quienes_Somos.html
+++ b/Quienes_Somos.html
@@ -7,7 +7,12 @@
         <title>Quienes Somos</title>
     </head>
     <body>
-        <header></header>
+        <header>
+            <link rel="stylesheet" href="Quienes_Somos.html" />Quienes
+            somos<link />
+            <link rel="stylesheet" href="Nuestros_CV.html" />CV<link />
+            <link rel="stylesheet" href="Contacto.html" />Contacto<link />
+        </header>
         <main>
             <ul>
                 <li><a href="ArantxaCuello.html">Arantxa Cuello</a></li>
