Modified link tag

--- a/Nuestros_CV.html
+++ b/Nuestros_CV.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <link rel="stylesheet" href="Arantxa_cv.html">Arantxa CV
-    <link rel="stylesheet" href="EduCV.html">Edu CV
+    <a rel="stylesheet" href="Arantxa_cv.html">Arantxa CV </a>
+    <a rel="stylesheet" href="EduCV.html">Edu CV</a>
   </header>
   
 </body>
