added main tag on Contacto.html

--- a/Contacto.html
+++ b/Contacto.html
@@ -13,5 +13,17 @@
             <link rel="stylesheet" href="Nuestros_CV.html" />CV<link />
             <link rel="stylesheet" href="index.html" />Home<link />
         </header>
+        <main>
+            <section>
+                <h1>Contacto</h1>
+                <form action="/index.php">
+                    <label for="fname">Firs Name:</label>
+                    <input type="text" id="fname" name="fname" />
+                </form>
+            </section>
+        </main>
+        <footer>
+            <p>website created by Aranxa Cuello and Eduardo Ruiz</p>
+        </footer>
     </body>
 </html>
