--- a/Contacto.html
+++ b/Contacto.html
@@ -16,10 +16,27 @@
         <main>
             <section>
                 <h1>Contacto</h1>
-                <form action="/index.php">
-                    <label for="fname">Firs Name:</label>
-                    <input type="text" id="fname" name="fname" />
-                </form>
+                <section>
+                    <form action="/index.php">
+                        <ul>
+                            <li>
+                                <label for="fname">Firs Name:</label>
+                                <input type="text" id="fname" name="fname" />
+                            </li>
+                            <li>
+                                <label for="email">Enter your email:</label>
+                                <input
+                                    type="email"
+                                    id="email"
+                                    name="email"
+                                    required
+                                />
+                            </li>
+                            <li><textarea name="comments"></textarea></li>
+                            <li><input type="submit" value="Submit" /></li>
+                        </ul>
+                    </form>
+                </section>
             </section>
         </main>
         <footer>
