--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <link rel="stylesheet" href="Quienes_Somos.html">Quienes somos</link>
-        <link rel="stylesheet" href="Nuestros_CV.html">CV</link>
-        <link rel="stylesheet" href="Contacto.html">Contacto</link>
+        <a  href="Quienes_Somos.html">Quienes somos</a>
+        <a  href="Nuestros_CV.html">CV</a>
+        <a  href="Contacto.html">Contacto</a>
     </header>
     <footer>
         <p>website created by Aranxa Cuello and Eduardo Ruiz</p>
